@@ -14,6 +14,9 @@ Unreleased Changes
   * Command line options specified in the authinfo file (in particular
     --backend-options) are now parsed correctly.
 
+  * S3QL now uses python-cryptography instead of the (no longer
+    maintained) pycrypto module.
+
 2018-12-28, S3QL 2.33
 
   * Fixed a sporadic test failure in t5_cache.py.
